--- a/pallets/ares-oracle/Cargo.toml
+++ b/pallets/ares-oracle/Cargo.toml
@@ -14,14 +14,20 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 bound-vec-helper = { default-features = false, path = "../../tools/bound-vec-helper" }
-hex = { version = "0.4", default-features = false }
+#hex = { version = "0.4", default-features = false }
+hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
 lite-json = { version = "0.1", default-features = false }
-log = { version = "0.4.14", default-features = false }
-codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
+#log = { version = "0.4.14", default-features = false }
+log = { version = "0.4.17", default-features = false }
+#codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
+    "derive",
+    "max-encoded-len",
+] }
 serde = { version = '1.0.130', default-features = false, features = ['derive'] }
-serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
-
+serde_json = { version = '1.0.85', default-features = false, features = ['alloc'] }
+#scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
@@ -61,6 +67,7 @@ std = [
     "lite-json/std",
     "sp-core/std",
     "sp-io/std",
+    "scale-info/std",
     "sp-keystore",
     "sp-runtime/std",
     "sp-std/std",
