--- a/rpc/ares-rpc/Cargo.toml
+++ b/rpc/ares-rpc/Cargo.toml
@@ -12,7 +12,7 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 ares-oracle-provider-support = { path = "../../pallets/ares-oracle-provider-support" }
-codec = { package = "parity-scale-codec", version = "2.0.0" }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len", ] }
 chrono = "0.4"
 serde = { version = "1.0.136", features = ["derive"] }
 jsonrpc-core = "18.0.0"
