--- a/pallets/ares-oracle/Cargo.toml
+++ b/pallets/ares-oracle/Cargo.toml
@@ -14,19 +14,15 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 bound-vec-helper = { default-features = false, path = "../../tools/bound-vec-helper" }
-#hex = { version = "0.4", default-features = false }
 hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
 lite-json = { version = "0.1", default-features = false }
-#log = { version = "0.4.14", default-features = false }
 log = { version = "0.4.17", default-features = false }
-#codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
     "derive",
     "max-encoded-len",
 ] }
 serde = { version = '1.0.130', default-features = false, features = ['derive'] }
 serde_json = { version = '1.0.85', default-features = false, features = ['alloc'] }
-#scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
@@ -43,17 +39,16 @@ pallet-babe = { git = "https://github.com/paritytech/substrate", default-feature
 sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, features = ["historical"], branch = "polkadot-v0.9.28" }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28", optional = true }
+sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 
 oracle-finance = { default-features = false, path = "../oracle-finance" }
 staking-extend = { default-features = false, path = "../staking-extend" }
 ares-oracle-provider-support = { default-features = false, path = "../ares-oracle-provider-support" }
 
 [dev-dependencies]
-#static_assertions = "1.1.0"
-sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
-pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
-
 
 [features]
 default = ["std"]
@@ -62,6 +57,7 @@ std = [
     "bound-vec-helper/std",
     "sp-application-crypto/std",
     "codec/std",
+    "frame-benchmarking/std",
     "frame-support/std",
     "frame-system/std",
     "lite-json/std",
@@ -82,10 +78,16 @@ std = [
     "pallet-session/std",
     "ares-oracle-provider-support/std",
     "staking-extend/std", # Ares staking
-    #	"sp-staking/std",
-    #	"pallet-timestamp/std",
     "sp-consensus-aura/std",
     "pallet-balances/std",
     "oracle-finance/std",
 ]
+
+runtime-benchmarks = [
+    "pallet-timestamp/runtime-benchmarks",
+    "frame-benchmarking/runtime-benchmarks",
+    "pallet-balances/runtime-benchmarks",
+    "oracle-finance/runtime-benchmarks",
+]
+
 try-runtime = ["frame-support/try-runtime"]
