--- a/pallets/manual-bridge/Cargo.toml
+++ b/pallets/manual-bridge/Cargo.toml
@@ -43,4 +43,9 @@ std = [
 	"sp-std/std",
 ]
 
+runtime-benchmarks = [
+	"frame-benchmarking/runtime-benchmarks",
+	"pallet-balances/runtime-benchmarks",
+]
+
 try-runtime = ["frame-support/try-runtime"]
