--- a/pallets/ares-oracle/Cargo.toml
+++ b/pallets/ares-oracle/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ares-oracle"
-version = "3.10.1"
+version = "3.1.2"
 authors = ["Ares Technologies <linhai@cancanyou.com>"]
 edition = "2018"
 license = "Unlicense"
@@ -21,6 +21,7 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
     "derive",
     "max-encoded-len",
 ] }
+impl-trait-for-tuples = "0.2.2"
 serde = { version = '1.0.143', default-features = false, features = ['derive'] }
 serde_json = { version = '1.0.85', default-features = false, features = ['alloc'] }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
