--- a/pallets/ares-oracle/Cargo.toml
+++ b/pallets/ares-oracle/Cargo.toml
@@ -70,7 +70,7 @@ std = [
     "sp-std/std",
     "log/std",
     "hex/std",
-    "serde/std",
+#    "serde/std",
     "serde_json/std",
     "sp-consensus-babe/std",
     "pallet-aura/std",
