--- a/pallets/ares-reminder/Cargo.toml
+++ b/pallets/ares-reminder/Cargo.toml
@@ -13,9 +13,10 @@ publish = false
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-md-5 = "0.10.5"
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
+arrform = { version = "0.1.1", default-features = false }
+md-5 = { version = "0.10.3", default-features = false }
 ares-oracle = { default-features = false, path = "../../pallets/ares-oracle" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 ares-oracle-provider-support = { default-features = false, path = "../ares-oracle-provider-support" }
 bound-vec-helper = { default-features = false, path = "../../tools/bound-vec-helper" }
@@ -33,13 +34,12 @@ sp-std = { git = "https://github.com/paritytech/substrate", default-features = f
 sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 sp-keystore = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.28" }
 
-[dev-dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
 
 [features]
 default = ["std"]
 std = [
+	"md-5/std",
+#	"md5/std",
 	"ares-oracle/std",
 	"sp-core/std",
 	"sp-io/std",
@@ -47,7 +47,7 @@ std = [
 	"ares-oracle-provider-support/std",
 	"bound-vec-helper/std",
 	"codec/std",
-	"sp-keystore",
+	"sp-keystore/std",
 	"frame-benchmarking/std",
 	"frame-support/std",
 	"frame-system/std",
@@ -56,6 +56,7 @@ std = [
 	"rustc-hex/std",
 	"scale-info/std",
 	"sp-std/std",
+	"sp-runtime/std",
 ]
 
 runtime-benchmarks = [
